--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "data",
+  "homepage": "https://lovnish044.github.io/Data",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,14 +9,17 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "framer-motion": "^4.1.17",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0y.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
